--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # H2 Database configuration
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=omer
-spring.datasource.password=root
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=omer
+#spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.generate-ddl=true
